# histreamer

./: CMakeLists.txt  README.md  audio_stream_util.c  audiodev.c  hisi_audio_dev.c  histreamer-audio.c  histreamer-video.c  util.h
extdrv/tw2865/: .tw2865.ko.cmd  .tw2865.mod.o.cmd  .tw2865.o.cmd  Module.symvers  modules.order
extdrv/tw2865/.tmp_versions/: tw2865.mod
hi_sdk/: hisi_comm.h  hisi_comm_audio.c  hisi_comm_isp.c  hisi_comm_sys.c  hisi_comm_venc.c  hisi_comm_vi.c  hisi_comm_vpss.c  imx138_cmos.c  imx138_sensor_ctl.c  sensor.c  sensor.h
